# FinSentNewsNLP

./: .gitignore  README.md  pyproject.toml
data/raw/Financial-Phrases-Sentiments/: merged-bitcoin-sentiment.csv
docker/: Dockerfile
main/: app.py
main/get_data/: __init__.py  readme.md
models/: log-reg_mod_50Agree.pkl  log-reg_mod_66Agree.pkl  log-reg_mod_75Agree.pkl  log-reg_mod_AllAgree.pkl
models/large_FinBert_fine_tuned/: config.json
notebooks/: Assignment-04-Financial news analysis with NLP.ipynb  Assignment-04-FineTuning.ipynb
tokenizers/: large_FinBERT_tokenizer.pkl
vectorizers/: small_FinBERT_vectorizer.pkl  vectorizer_50Agree.pkl  vectorizer_66Agree.pkl  vectorizer_75Agree.pkl  vectorizer_AllAgree.pkl
